# Messaging-System

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt  Dockerfile
backend/src/: message_bus.cpp  message_bus.hpp  ring_buffer.hpp  server.cpp  shared_memory.cpp  shared_memory.hpp  tests.cpp
backend/src/market_data/: finnhub_client.hpp  market_data_types.hpp  replay_engine.cpp  replay_engine.hpp
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js
